# packaging_solaredgeoptimizers

./: .gitignore  README.md  build.bat  pyproject.toml
src/: test.py
src/solaredgeoptimizers/: __init__.py  solaredgeoptimizers.py
