[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "solaredgeoptimizers"
version = "1.0.0"
authors = [
  { name="Job van de Sande", email="jobvandesande@outlook.com" },
]
description = "A package to communitate with the solaradge portal"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ProudElm/packaging_solaredgeoptimizers"
"Bug Tracker" = "https://github.com/ProudElm/packaging_solaredgeoptimizers/issues"